syntax = "proto3";

package proto;

option go_package = "github.com/frankffenn/worker-srv/proto";

service WorkerService  {
	rpc SealCommit2(SealCommit2Request) returns (SealCommit2Response);
}

enum StatusCode {
    SUCCESS = 0; 
    SERVER_BUSY = 1;
}

message SealCommit2Request {
    SectorID Sector  = 1;
    bytes Commit1Out = 2;
}

message SealCommit2Response {
    StatusCode code = 1;
    bytes Proof = 2;
}

message SectorID {
	uint64 Miner = 1;
	uint64 Number = 2;
}       